--- a/homeserv.html
+++ b/homeserv.html
@@ -12,6 +12,10 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="css/homeserv.css">
+		<link rel="stylesheet" href="css/blueimp-gallery.css">
+		<link rel="stylesheet" href="css/blueimp-gallery-indicator.css">
+		<link rel="stylesheet" href="css/blueimp-gallery-video.css">
+		
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 
   </head>
@@ -24,24 +28,24 @@
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
+                    <span class="sr-only"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#"></a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="#">About</a>
+                        <a href="#"></a>
                     </li>
                     <li>
-                        <a href="#">Services</a>
+                        <a href="#"></a>
                     </li>
                     <li>
-                        <a href="#">Contact</a>
+                        <a href="#"></a>
                     </li>
                 </ul>
             </div>
@@ -51,34 +55,30 @@
     </nav>
 
     <!-- Page Content -->
-    <div class="container">
-        <div class="col-lg-12">
-            <h1 class="page-header">Thumbnail Gallery</h1>
-        </div>
-        <div id="main-images-thumbs" class="row">
-
-   
-        <hr>
-
-
-
-        <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-        </footer>
-
-    </div>
-    <!-- /.container -->
-
-
+	<!-- The container for the list of example images -->
+	<div id="links" class="links"></div>
+	<!-- The Gallery as lightbox dialog, should be a child element of the document body -->
+	<div id="blueimp-gallery" class="blueimp-gallery">
+	    <div class="slides"></div>
+	    <h3 class="title"></h3>
+	    <a class="prev">‹</a>
+	    <a class="next">›</a>
+	    <a class="close">×</a>
+	    <a class="play-pause"></a>
+	    <ol class="indicator"></ol>
+	</div>
+	<br>
+	<script src="js/blueimp-helper.js"></script>
+	<script src="js/blueimp-gallery.min.js"></script>
+	<script src="js/blueimp-gallery-fullscreen.js"></script>
+	<script src="js/blueimp-gallery-indicator.js"></script>
+	<script src="js/jquery.blueimp-gallery.min.js"></script>
 	<script src="js/jq/jquery-2.1.4.min.js"></script>
+	
+	<script src="js/jquery.blueimp-gallery.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
   <script src="js/bootstrap.min.js"></script>
 	<script src="js/homeserv.js"></script>
- 
+   
   </body>
 </html>
