working left right lightbox key functions to scroll through images

--- a/homeserv.html
+++ b/homeserv.html
@@ -10,13 +10,9 @@
 
     <!-- Bootstrap -->
 		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 		<link rel="stylesheet" href="css/homeserv.css">
-		<link rel="stylesheet" href="css/blueimp-gallery.css">
-		<link rel="stylesheet" href="css/blueimp-gallery-indicator.css">
-		<link rel="stylesheet" href="css/blueimp-gallery-video.css">
-		
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		
 
   </head>
   <body>
@@ -53,31 +49,24 @@
         </div>
         <!-- /.container -->
     </nav>
+		<div class="container">
+			<ul class="row">
+    	</ul>
+		</div>
 
-    <!-- Page Content -->
-	<!-- The container for the list of example images -->
-	<div id="links" class="links"></div>
-	<!-- The Gallery as lightbox dialog, should be a child element of the document body -->
-	<div id="blueimp-gallery" class="blueimp-gallery">
-	    <div class="slides"></div>
-	    <h3 class="title"></h3>
-	    <a class="prev">‹</a>
-	    <a class="next">›</a>
-	    <a class="close">×</a>
-	    <a class="play-pause"></a>
-	    <ol class="indicator"></ol>
-	</div>
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-body">
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+
 	<br>
-	<script src="js/blueimp-helper.js"></script>
-	<script src="js/blueimp-gallery.min.js"></script>
-	<script src="js/blueimp-gallery-fullscreen.js"></script>
-	<script src="js/blueimp-gallery-indicator.js"></script>
-	<script src="js/jquery.blueimp-gallery.min.js"></script>
-	<script src="js/jq/jquery-2.1.4.min.js"></script>
 	
-	<script src="js/jquery.blueimp-gallery.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/bootstrap.min.js"></script>
+	<script src="js/jq/jquery-2.1.4.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
 	<script src="js/homeserv.js"></script>
    
   </body>
