added socket.io method to push on new images (loadMore) on request - this allows cacheing to an array and moving to client on demand

--- a/homeserv.html
+++ b/homeserv.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/homeserv.css">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	  <script src="/socket.io/socket.io.js"></script>
 		
 
   </head>
@@ -46,7 +47,8 @@
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-        </div>
+        <button type="button" id="moreButton">get more images</button>
+				</div>
         <!-- /.container -->
     </nav>
 		<div class="container">
@@ -68,6 +70,7 @@
 	<script src="js/jq/jquery-2.1.4.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/homeserv.js"></script>
+	
    
   </body>
 </html>
