added pagination on backend. db will socket out 20 new items based on last item displayed on page "datetime" setting. added bottomless page. if we get within 300px of bottom scroll, we will ask for 20 more images. next stop, UI prettiness..."

--- a/homeserv.html
+++ b/homeserv.html
@@ -56,7 +56,7 @@
 					            });
 					        </script>
 					    </div>
-        			<button type="button" id="moreButton">get more images</button>
+        			<button type="button" id="initalLoadButton">get more images</button>
 				
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
