--- a/homeserv.html
+++ b/homeserv.html
@@ -18,6 +18,8 @@
 		<script src="js/homeserv.js"></script>
 		<script type="text/javascript" src="../bower_components/moment/min/moment.min.js"></script>
 	  <script type="text/javascript" src="../bower_components/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+		<script src="https://apis.google.com/js/platform.js" async defer></script>
+		
 	  <link rel="stylesheet" href="../bower_components/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->		
 
@@ -28,7 +30,13 @@
     <!-- Navigation -->
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<form class="navbar-form navbar-left homeserv-nav" role="search">
+
 		  <div class="form-group">
+        <input id="search-input" type="text" class="form-control" placeholder="Search">
+        <button id="search-button" type="submit" class="btn btn-default">Submit</button>
+			</div>
+			
+			<div class="form-group">
 				<div class='input-group date' id='datetimepicker1'>
 					<input type='text' class="form-control" id='datetimepicker2'/>
 					<span class="input-group-addon">
@@ -43,22 +51,64 @@
 		      );
 		    });
 		  </script>
-			<button type="button" id="initalLoadButton">get more images</button>
-		</form>
+		  <!--button type="button" id="initalLoadButton">get more images</button-->
+          <div class="checkbox">
+              <label><input id="vid-checkbox" class="media-checkbox" type="checkbox" value="" checked="true">Video</label>
+          </div>
+          <div class="checkbox">
+              <label><input id="img-checkbox" class="media-checkbox" type="checkbox" value="" checked="true">Image</label>
+          </div>
+      </form>
 	</nav>
 
-
-
-
 	<div class="container">
-		<ul class="image-row">
-  	</ul>
+		<div class="image-row">
+  	    </div>
 	</div>
+
+    <div class="modal bs-example-modal-sm" id="tagInputModal" tabindex="-1" role="dialog" aria-labelledby="new tag" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-body">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <input type="text" id="modal-tag-input" class="form-control" placeholder="add tag">
+                        </div>
+                    </div>
+                </div>
+                <!--div class="modal-footer"-->
+            </div>
+        </div>
+    </div>
 
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
-        <div class="modal-body">
+        <div class="modal-body"></div>
+        <div class="modal-footer">
+ 
+            <div class="row">
+                <div class="col-xs-6 pull-right">
+                    <div class="input-group">
+                        <input type="text" id="tag-input" class="form-control" placeholder="Add new tag">
+                        <div class="input-group-btn">
+                            <button class="btn btn-secondary add-tag" title="tag all files in group" type="button" id="add-tag-multi">
+                                <span class="glyphicon glyphicon-plus-sign" aria-hidden="true"></span>
+                            </button>
+                            <button class="btn btn-secondary add-tag" title="tag this file only" type="button" id="add-tag-single">
+                                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                            </button>
+                            <button class="btn btn-secondary add-tag" title="favorite"  type="button" id="add-tag-fav">
+                                <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
+                            </button>
+                        </div>
+                    </div><!-- /input-group -->
+                </div><!-- /.col-lg-6 -->
+                <div id="image-tags" class="col-md-6">
+                </div>
+            </div>
+            <p id="modal_date"></p>
+		    <button id="addtoDropbox" type="button" class="btn btn-info">dropbox</button>
         </div>
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
